@@ -3,7 +3,6 @@ package com.fastcampus.projectboard.service;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 @Service
@@ -13,12 +12,14 @@ public class PaginationService {
 
 
     public List<Integer> getPaginationBarNumbers(int currentPageNumber, int totalPages) {
-        int startNumber = Math.max(0, currentPageNumber - (BAR_LENGTH / 2));
-        int endNumber = Math.min(totalPages, startNumber + BAR_LENGTH);
-        return IntStream.range(startNumber, endNumber).boxed().collect(Collectors.toList());
+        int startNumber = Math.max(currentPageNumber - (BAR_LENGTH / 2), 0);
+        int endNumber = Math.min(startNumber + BAR_LENGTH, totalPages);
+
+        return IntStream.range(startNumber, endNumber).boxed().toList();
     }
 
     public int currentBarLength() {
         return BAR_LENGTH;
     }
+
 }
